Changes:

changes in swt 0.8 beta 3 (27.11.2009)
- added open url action to menu toolbar and context menu
- open jpwsafe website should now work in Linux KDE desktop (Java 6)
- added record access time saving preference (default is false)
- fixed unlocking with open edit dialoge (Trac Ticket 14)
- fixed "open safe" in first time startup dialogue
- close on doubleclick on tray icon (Bug #2790970)
- do not open several passphrase entry dialogs on restore
- replace tabs and other whitespace with space in notes column for tree and table view
- fixed excessive object allocation with SHA256 digest (Trac Ticket 10) 
- update jface/eclipse libs to 3.5.1

changes in swt 0.8 beta 2 (30.09.2009)
- fix for asymmetric passphrase corruption in 0.8 beta 1
- unknown V3 fields are handled (Bug #2462736)
- expand/collapse tree on doubleclick
- added copy URL action (Patch #2813457 by timmydog)
- reopen when doubleclicking on tray icon (Bug #2790970)
- passwordsafe lib Unit test coverage
- upgrade to swt and jface 3.5.1 / 3.5.0
- initial read only support (in startup screen, with a preference)
- added licence dialogue
- maintain tree expansion on delete item (Patch #2783428 by timmydog) 

changes in swt 0.8 beta 1 (26.04.2009)
- Amazon S3 support (contrib by mtiller)
- in-memory encryption of password safe records (Trac Ticket 6)
- localisation in german (Trac Ticket 3)
- check for changed passwordsafe file before saving
- fix change safe combination (contrib by M.Panero)
- check safe combination before export (Trac Ticket 5)
- Default Preferences (Trac Ticket 2) 
- fixed File->Export To->Plain Text (tab separated) does not work (Bug #2557998) 

changes in swt 0.7 final (14.01.2009)
- Fix for win passwordsafe (U3) files (Bug #2424785) 
- win32 build changed from exe4j to launch4j (Bug #2327605)
- linux start script log includes user name (Bug #2507288)
- required java version now only java 5 (Bug #2412881)

changes in swt 0.7 beta 3 (03.12.2008)
- fixed icon in build (Bug #2320920)