@@ -318,7 +318,7 @@
         	icon="${mac.dir}/PasswordSafe.icns" 
         	version="${short.version}" 
         	aboutmenuname="${app.name}" 
-        	jvmversion="1.5*" 
+        	jvmversion="1.5+" 
         	infostring="PasswordSafeSWT, (c) 2008,2009">
             <jarfileset dir="${deploy.dir}">
                 <include name="PasswordSafeSWT.jar" />
